refactor(runtime): minimize java bootstrap and move runtime to kotlin
Keep Java focused on Kotlin bootstrap and move runtime dependency orchestration into Kotlin bridges and runtime modules.

Bundle bstats with platform jars instead of loading it at runtime, and verify Paper, Waterfall, and Velocity smoke tests with the rebuilt artifacts.