@@ -16,8 +16,6 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 
-import static me.zhenxin.zmusic.dependencies.common.PrimitiveIO.t;
-
 /**
  * ClassLoader 操作工具类
  * 支持 Java 8-21 的多版本兼容性
@@ -36,17 +34,14 @@ public class ClassAppender {
         // 所有 Java 版本统一使用 Unsafe 方案（避免模块化问题）
         initLookupJava8();
 
-        // 输出版本信息（仅在详细模式下）
-        if (System.getProperty("zmusic.dependency.verbose", "false").equalsIgnoreCase("true")) {
-            RuntimeLogger.info(t(
-                    "ClassAppender 初始化完成 | " + JavaVersionDetector.getDebugInfo() +
-                            " | Lookup: " + (lookup != null ? "成功" : "失败") +
-                            " | 降级模式: " + useReflectionFallback,
-                    "ClassAppender initialized | " + JavaVersionDetector.getDebugInfo() +
-                            " | Lookup: " + (lookup != null ? "Success" : "Failed") +
-                            " | Fallback mode: " + useReflectionFallback
-            ));
-        }
+        BootstrapContext.debug(BootstrapContext.t(
+                "ClassAppender 初始化完成 | " + BootstrapContext.getJavaDebugInfo() +
+                        " | Lookup: " + (lookup != null ? "成功" : "失败") +
+                        " | 降级模式: " + useReflectionFallback,
+                "ClassAppender initialized | " + BootstrapContext.getJavaDebugInfo() +
+                        " | Lookup: " + (lookup != null ? "Success" : "Failed") +
+                        " | Fallback mode: " + useReflectionFallback
+        ));
     }
 
     /**
@@ -63,14 +58,14 @@ public class ClassAppender {
             lookup = (MethodHandles.Lookup) unsafe.getObject(lookupBase, lookupOffset);
 
             if (lookup == null) {
-                RuntimeLogger.warning(t(
+                BootstrapContext.warning(BootstrapContext.t(
                         "Java 8 Unsafe lookup 初始化失败，尝试降级方案",
                         "Java 8 Unsafe lookup initialization failed, trying fallback"
                 ));
                 initLookupFallback();
             }
         } catch (Throwable e) {
-            RuntimeLogger.warning(t(
+            BootstrapContext.warning(BootstrapContext.t(
                     "Java 8 Unsafe 访问失败: " + e.getMessage() + "，尝试降级方案",
                     "Java 8 Unsafe access failed: " + e.getMessage() + ", trying fallback"
             ));
@@ -79,82 +74,11 @@ public class ClassAppender {
     }
 
     /**
-     * Java 9-11 初始化 Lookup（尝试新 API，失败则降级）
-     */
-    private static void initLookupJava9To11() {
-        try {
-            // Java 9+ 推荐使用 MethodHandles.privateLookupIn()
-            // 但在 Java 9-11 可能还需要添加 --add-opens
-            Method privateLookupIn = MethodHandles.class.getMethod(
-                    "privateLookupIn",
-                    Class.class,
-                    MethodHandles.Lookup.class
-            );
-            lookup = (MethodHandles.Lookup) privateLookupIn.invoke(
-                    null,
-                    MethodHandles.Lookup.class,
-                    MethodHandles.lookup()
-            );
-
-            if (lookup == null) {
-                throw new IllegalStateException("privateLookupIn returned null");
-            }
-        } catch (Throwable e) {
-            // 获取真实的错误信息（InvocationTargetException 的 cause）
-            Throwable cause = e.getCause() != null ? e.getCause() : e;
-            String errorMsg = cause.getMessage() != null ? cause.getMessage() : cause.getClass().getSimpleName();
-
-            // 模块化限制是预期行为，使用 debug 级别而非 warning
-            RuntimeLogger.debug(t(
-                    "Java 9-11 privateLookupIn 需要模块访问权限: " + errorMsg + "，降级使用 Unsafe 方案",
-                    "Java 9-11 privateLookupIn requires module access: " + errorMsg + ", fallback to Unsafe"
-            ));
-            // 降级到 Java 8 的 Unsafe 方式
-            initLookupJava8();
-        }
-    }
-
-    /**
-     * Java 12+ 初始化 Lookup（优先使用标准 API）
-     */
-    private static void initLookupJava12Plus() {
-        try {
-            // Java 9+ 标准方式（使用反射以兼容 Java 8 编译）
-            Method privateLookupIn = MethodHandles.class.getMethod(
-                    "privateLookupIn",
-                    Class.class,
-                    MethodHandles.Lookup.class
-            );
-            lookup = (MethodHandles.Lookup) privateLookupIn.invoke(
-                    null,
-                    MethodHandles.Lookup.class,
-                    MethodHandles.lookup()
-            );
-
-            if (lookup == null) {
-                throw new IllegalStateException("privateLookupIn returned null");
-            }
-        } catch (Throwable e) {
-            // 获取真实的错误信息（InvocationTargetException 的 cause）
-            Throwable cause = e.getCause() != null ? e.getCause() : e;
-            String errorMsg = cause.getMessage() != null ? cause.getMessage() : cause.getClass().getSimpleName();
-
-            // 模块化限制是预期行为，使用 debug 级别而非 warning
-            RuntimeLogger.debug(t(
-                    "Java 12+ privateLookupIn 需要模块访问权限: " + errorMsg + "，降级使用 Unsafe 方案",
-                    "Java 12+ privateLookupIn requires module access: " + errorMsg + ", fallback to Unsafe"
-            ));
-            // 尝试 Unsafe（某些环境可能仍然可用）
-            initLookupJava8();
-        }
-    }
-
-    /**
      * 降级方案：使用传统反射而非 MethodHandle
      */
     private static void initLookupFallback() {
         useReflectionFallback = true;
-        RuntimeLogger.info(t(
+        BootstrapContext.info(BootstrapContext.t(
                 "ClassAppender 启用反射降级模式（性能可能稍低）",
                 "ClassAppender enabled reflection fallback mode (performance may be slightly lower)"
         ));
